--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: rgba(220, 220, 220, 0.733);
+    background-color: #F5F5F5;
+
 }
 .head-container{
     display: flex;
